welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: not found: value EAST
	var dir:Direction=EAST
                          ^SnakeBuggle:4: error: not found: type Boolen
	def chercheMurNord:Boolen = {
                           ^SnakeBuggle:9: error: not found: value stDirection
		stDirection(dir)
                ^